; ModuleID = '/home/carl/AnghaBench/linux/drivers/lightnvm/extr_pblk-core.c_pblk_update_map_cache.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/lightnvm/extr_pblk-core.c_pblk_update_map_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pblk = type { i32 }
%struct.ppa_addr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pblk_update_map_cache(%struct.pblk* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ppa_addr, align 4
  %5 = alloca %struct.pblk*, align 8
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %struct.ppa_addr, %struct.ppa_addr* %4, i32 0, i32 0
  store i32 %2, i32* %7, align 4
  store %struct.pblk* %0, %struct.pblk** %5, align 8
  store i32 %1, i32* %6, align 4
  %8 = load %struct.pblk*, %struct.pblk** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = getelementptr inbounds %struct.ppa_addr, %struct.ppa_addr* %4, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @pblk_update_map(%struct.pblk* %8, i32 %9, i32 %11)
  ret void
}

declare dso_local i32 @pblk_update_map(%struct.pblk*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
